--- a/.github/workflows/flutter-nightly.yml
+++ b/.github/workflows/flutter-nightly.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   run-flutter-nightly-build:
+    runs-on: self-hosted
     uses: ./.github/workflows/flutter-build.yml
     secrets: inherit
     with:
